--- a/public/contact.html
+++ b/public/contact.html
@@ -152,9 +152,9 @@
 	<!-- JAVACRIPT CODE -->
 	<script>
 		//bot token
-		var telegram_bot_id = "7912152747:AAEWZ0TpYYtqeJqfdBfz0KZTy8KYaZ2fLOY";
+		var telegram_bot_id = "";
 		//chat id
-		var chat_id = -1002309096697;
+		var chat_id = "";
 		var u_name, email, message;
 		var ready = function () {
 			subject = document.getElementById("subject").value;
