changing the services

--- a/public/index.html
+++ b/public/index.html
@@ -169,17 +169,17 @@
 			</div>
 			<div class="service-col" data-aos="fade-up" data-aos-duration="800" onclick="navigateToService()">
 				<div class="icon-wrapper">
-					<i class="fas fa-seedling"></i>
+					<i class="fas fa-soap"></i>
 				</div>
-				<h3>Gardening Services</h3>
-				<p>Keep your garden vibrant and healthy with our expert gardening and maintenance services.</p>
+				<h3>Residential cleaning</h3>
+				<p>Enjoy a clean and comfortable home with our thorough and reliable residential cleaning services, designed to fit your lifestyle.</p>
 			</div>
 			<div class="service-col" data-aos="fade-up" data-aos-duration="800" onclick="navigateToService()">
 				<div class="icon-wrapper">
-					<i class="fas fa-dumpster"></i>
+					<i class="fas fa-tint"></i>
 				</div>
-				<h3>Hard Rubbish Removal</h3>
-				<p>Clear out large, unwanted items quickly and responsibly with our rubbish removal services.</p>
+				<h3>Commercial cleaning</h3>
+				<p>Keep your workspace spotless and hygienic with our professional commercial cleaning services, tailored to meet your business needs.</p>
 			</div>
 			<div class="service-col" data-aos="fade-up" data-aos-duration="800" onclick="navigateToService()">
 				<div class="icon-wrapper">
@@ -192,7 +192,7 @@
 				<div class="icon-wrapper">
 					<i class="fas fa-broom"></i>
 				</div>
-				<h3>Other Cleaning Services</h3>
+				<h3>Custom Cleaning Services</h3>
 				<p>From general cleaning to tailored requests, we handle it all with care and precision.</p>
 			</div>
 		</div>
