--- a/public/service.html
+++ b/public/service.html
@@ -103,19 +103,19 @@
 	
 				<!-- Service 3 -->
 				<div class="service-item">
-					<img src="images/3.jpg" alt="Gardening Services" class="service-image">
-					<h3>Gardening Services</h3>
+					<img src="images/3.jpg" alt="Residential cleaning" class="service-image">
+					<h3>Residential cleaning</h3>
 					<p>
-						From lawn mowing to hedge trimming, we take care of your garden, keeping it lush and beautifully maintained all year round.
+						Enjoy a clean and comfortable home with our thorough and reliable residential cleaning services, designed to fit your lifestyle.
 					</p>
 				</div>
 	
 				<!-- Service 4 -->
 				<div class="service-item">
-					<img src="images/4.jpg" alt="Hard Rubbish Removal" class="service-image">
-					<h3>Hard Rubbish Removal</h3>
+					<img src="images/4.jpg" alt="Commercial cleaning" class="service-image">
+					<h3>Commercial cleaning</h3>
 					<p>
-						Clear out the clutter effortlessly with our hard rubbish removal services. We handle the heavy lifting so you don’t have to.
+						Keep your workspace spotless and hygienic with our professional commercial cleaning services, tailored to meet your business needs.
 					</p>
 				</div>
 	
@@ -131,7 +131,7 @@
 				<!-- Service 6 -->
 				<div class="service-item">
 					<img src="images/6.jpg" alt="Other Cleaning Services" class="service-image">
-					<h3>Other Cleaning</h3>
+					<h3>Custom Cleaning</h3>
 					<p>
 						From general cleaning to specialized requests, we offer a range of customizable services to meet your unique needs.
 					</p>
